--- a/app/src/main/res/layout/item_birthdate_record.xml
+++ b/app/src/main/res/layout/item_birthdate_record.xml
@@ -8,83 +8,94 @@
         <variable
             name="data"
             type="com.kr.birthdayreminderapp.roomDb.BirthdateModel" />
+
+        <variable
+            name="presenter"
+            type="com.kr.birthdayreminderapp.presenter.MainActivityPresenter" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:layout_height="wrap_content">
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guidLine85"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.85" />
+            android:onClick="@{()->presenter.onEditClicked(data)}"
+            android:padding="8dp"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/txtName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@{data.userName}"
-            android:textColor="@color/colorBlack"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@id/guidLine85"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="Mohak Shah" />
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guidLine85"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.85" />
 
-        <TextView
-            android:id="@+id/txtBirthdate"
-            birthDate="@{data.birthDate}"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:textColor="@color/colorBlack"
-            app:layout_constraintEnd_toEndOf="@id/guidLine85"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/txtName"
-            tools:text="Birthdate: 18 April, 1997" />
+            <TextView
+                android:id="@+id/txtName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@{data.userName}"
+                android:textColor="@color/colorBlack"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@id/guidLine85"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Mohak Shah" />
 
-        <TextView
-            android:id="@+id/txtEmail"
-            emailAddress="@{data.email}"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:textColor="@color/colorBlack"
-            app:layout_constraintEnd_toEndOf="@id/guidLine85"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/txtBirthdate"
-            tools:text="Email: test@mailinator.com" />
+            <TextView
+                android:id="@+id/txtBirthdate"
+                birthDate="@{data.birthDate}"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:textColor="@color/colorBlack"
+                app:layout_constraintEnd_toEndOf="@id/guidLine85"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/txtName"
+                tools:text="Birthdate: 18 April, 1997" />
 
-        <TextView
-            android:id="@+id/txtContactNo"
-            contactNo="@{data.contactNumber}"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:textColor="@color/colorBlack"
-            app:layout_constraintEnd_toEndOf="@id/guidLine85"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/txtEmail"
-            tools:text="Contact No: 8885551110" />
+            <TextView
+                android:id="@+id/txtEmail"
+                emailAddress="@{data.email}"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:textColor="@color/colorBlack"
+                app:layout_constraintEnd_toEndOf="@id/guidLine85"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/txtBirthdate"
+                tools:text="Email: test@mailinator.com" />
 
-        <TextView
-            android:id="@+id/txtAge"
-            dobAge="@{data.birthDate}"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textColor="@color/colorBlack"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/guidLine85"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="100" />
+            <TextView
+                android:id="@+id/txtContactNo"
+                contactNo="@{data.contactNumber}"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:textColor="@color/colorBlack"
+                app:layout_constraintEnd_toEndOf="@id/guidLine85"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/txtEmail"
+                tools:text="Contact No: 8885551110" />
 
+            <TextView
+                android:id="@+id/txtAge"
+                dobAge="@{data.birthDate}"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="@color/colorBlack"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/guidLine85"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="100" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
